La til seksjon for filmer

--- a/main.html
+++ b/main.html
@@ -1,7 +1,76 @@
-<!DOCTYPE html>
-<html>
-  <head></head>
+<!DOCTYPE html>   
+<html lang="en">
+  <head>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/Grid.css">
+    <link rel="stylesheet" type="text/css" href="css/normalizer.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet" type="text/css">
+
+    <meta charset="UTF-8">
+    <title>Thor</title>
+  </head>
   <body>
-    <p>b</p>
+
+    <section class="section-ironManFacts"> 
+
+      <div class="row">
+        <h2>Thor quick facts!</h2>
+        <p class="long-copy"> 
+          Iron Man was introduced by Marvel Comics in the comic book Tales of Suspense #39 in March 1963.<br>
+          The creators were Stan Lee, Larry Lieber, Don Heck, and Jack Kirby. 
+        </p>   
+      </div> 
+
+      <div class="row">
+        <div class="test span-1-of-4 box">
+          <h3>What are Iron Man's powers?</h3>
+          <p> 
+            Iron Man possesses a wealth of powers through his powered armor suit.
+            These powers include super strength, the ability to fly, durability, and a number of weapons. <br>
+            The primary weapons used by Iron Man are rays that are shot from the palms of his gauntlets
+          </p>
+        </div>
+        <div class="test span-2-of-4 box">
+          <h3>Who is Iron man and how did he get his power?</h3>
+          <p>
+            Iron Man gets his superpowers from his metallic suit of armor and other technologies invented by his alter ego Tony Stark. <br>
+            Tony is a genius engineer and wealthy owner of a technology company. Tony built the Iron Man suit when he was kidnapped and suffered an injury to his heart. <br> 
+            The suit was meant to save his life and help him escape. Tony also has an improved artificial nervous system which gives him greater healing powers, super perception, and the ability to merge with his suit of armor. Outside of his armor he has been trained in hand-to-hand combat.
+          </p>
+        </div>
+        <div class="test span-3-of-4 box">
+          <h3>Who are Iron Man's Enemies?</h3>
+          <p> 
+            The list of foes that Iron Man has battled over the years is long. Here is a description of some of his main enemies:
+            <ul>
+              <li></li>
+              <li></li> 
+            </ul>
+          </p>
+        </div>
+      </div>
+
+    </section>
+    
+    <section>
+      <div class="row">
+        <h2>Movies</h2>
+        <div class="main-movie-box">
+          <h3>Thor</h3>
+          <div class="main-movie-content">
+              <p>
+                  In 965 AD, Odin, king of Asgard, wages war against the Frost Giants of Jotunheim and their leader Laufey, to prevent them from conquering the nine realms, starting with Earth. The Asgardian warriors defeat the Frost Giants in Tønsberg, Norway, and seize the source of their power, the Casket of Ancient Winters.
+              </p>
+          </div>
+        </div>
+        <div class="main-movie-box">
+          <h3>Thor: The Dark World</h3>
+        </div>
+        <div class="main-movie-box">
+          <h3>Thor: Ragnarok</h3>
+        </div>
+      </div>
+    </section>
+    
   </body>
 </html>
