La til bilder og får fremgang på "film-området" En del av grid'et er rart på høyre side. Det kommer opp en liten del som ikke blir tatt i bruk av grid-items. Jeg vet ikke...

--- a/main.html
+++ b/main.html
@@ -57,17 +57,24 @@
         <h2>Movies</h2>
         <div class="main-movie-box">
           <h3>Thor</h3>
-          <div class="main-movie-content">
-            <p>
+          <div class="main-movie-container">
+            <p class="main-movie-item">
               In 965 AD, Odin, king of Asgard, wages war against the Frost Giants of Jotunheim and their leader Laufey, to prevent them from conquering the nine realms, starting with Earth. The Asgardian warriors defeat the Frost Giants in Tønsberg, Norway, and seize the source of their power, the Casket of Ancient Winters.
             </p>
+            <img class="main-movie-item" src="images/movie1.jpg">
           </div>
         </div>
         <div class="main-movie-box">
           <h3>Thor: The Dark World</h3>
+          <div class="main-movie-container">
+              <img class="main-movie-item" src="images/movie2.jpg">
+          </div>
         </div>
         <div class="main-movie-box">
           <h3>Thor: Ragnarok</h3>
+          <div class="main-movie-container">
+              <img class="main-movie-item" src="images/movie3.jpg">
+          </div>
         </div>
       </div>
     </section>
