--- a/main.html
+++ b/main.html
@@ -55,31 +55,31 @@
     <section>
       <div class="row">
         <h2>Movies</h2>
-        <div class="movie-box">
+        <div class="movieBox">
           <h3>Thor</h3>
-          <div class="movie-container">
-            <p class="movie-item">
+          <div class="movieContainer">
+            <p class="movieItem">
               The reckless Thor, son of Odin, challenges his brother Loki's claim to the throne of Asgard. To teach him humility,<br>
               Odin casts the young warrior down to Earth to live amongst humans. Robbed of his powers, Thor falls in love with 
               scientist Jane Foster. While Loki usurps the throne of Asgard for evil gain and plans revenge, Thor's love for Jane and his 
               lessons of humility turn him into the true hero and legendary and immortal warrior-defender of the people of the Earth, 
               saving them from destruction.
             </p>
-            <img class="movie-item" src="images/movie1.jpg" alt="Thor">
-            <h3 class="movie-item ratings">Ratings</h3>
-              <h3 class="movie-item imdb">IMDb</h3>
-                <div class="movie-item" id=imdb1>a</div>
-              <h3 class="movie-item mc">Metacritic</h3>
-                <div class="movie-item" id=mc1></div>
-              <h3 class="movie-item rt">Rotten Tomatoes</h3>
-                <div class="movie-item" id=rt1>b</div>
+            <img class="movieItem" src="images/movie1.jpg" alt="Thor">
+            <h3 class="movieItem imdb">IMDb</h3>
+              <div class="movieItem imdb" id=imdb1>a</div>
+            <h3 class="movieItem mc">Metacritic</h3>
+              <div class="movieItem mc" id=mc1></div>
+            <h3 class="movieItem rt">Rotten Tomatoes</h3>
+              <div class="movieItem rt" id=rttm1>TOMATOMETER</div>
+              <div class="movieItem rt" id=rtas1>AUDIENCE SCORE</div>
           </div>
         </div>
 
-        <div class="movie-box">
+        <div class="movieBox">
           <h3>Thor: The Dark World</h3>
-          <div class="movie-container">
-            <p class="movie-item">
+          <div class="movieContainer">
+            <p class="movieItem">
               There are nine realms of Asgard, and once every five thousand years, they align. Earth happens to be one of these realms.
               These realms create portals between the worlds during the alignment which is called "Convergence". On Earth, in London, 
               England, Jane Foster believes she and her crew have discovered one such portal. Foster, while investigating the phenomenon, 
@@ -89,30 +89,21 @@
               Aether to destroy Asgard. Devising a plan with his brother, the war criminal Loki, Thor heads to "The Dark World" to 
               destroy the Aether and save Asgard.
             </p>
-            <img class="movie-item" src="images/movie2.jpg" alt="Thor2">
-            <h3 class="movie-item">Ratings</h3>
-            <div class="movie-item imdb">
-              <h3>IMDb</h3>
-              <div id=imdb2>
-              </div>
-            </div>
-            <div class="movie-item mc">
-              <h3>Metacritic</h3>
-              <div id=mc2>
-              </div>
-            </div>
-            <div class="movie-item rt">
-              <h3>Rotten Tomatoes</h3>
-              <div id=rt2>
-              </div>
-            </div>
+            <img class="movieItem" src="images/movie2.jpg" alt="Thor2">
+            <h3 class="movieItem imdb">IMDb</h3>
+              <div class="movieItem imdb" id=imdb2>a</div>
+            <h3 class="movieItem mc">Metacritic</h3>
+              <div class="movieItem mc" id=mc2></div>
+            <h3 class="movieItem rt">Rotten Tomatoes</h3>
+              <div class="movieItem rt" id=rttm2>b</div>
+              <div class="movieItem rt" id=rtas2>c</div>
           </div>
         </div>
 
-        <div class="movie-box">
+        <div class="movieBox">
           <h3>Thor: Ragnarok</h3>
-          <div class="movie-container">
-            <p class="movie-item">
+          <div class="movieContainer">
+            <p class="movieItem">
               Four years after defeating the Dark Elves and two years after the fight in Sokovia, Thor now finds himself trapped on the 
               other side of the universe on the wacky planet of Sakaar. Meanwhile, a new threat rises as the evil Hela, Goddess of Death 
               takes over Asgard and plans to conquer the universe. In order to get home, Thor must compete in a gladiator match 
@@ -120,31 +111,22 @@
               Avenger, The Incredible Hulk. Teaming with The Incredible Hulk and his deceptive brother Loki, Thor must return home to 
               Asgard in time to stop Hela and prevent the approaching Ragnarök, the apocalyptic destruction of Asgard.
             </p>
-            <img class="movie-item" src="images/movie3.jpg" alt="Thor3">
-            <h3 class="movie-item">Ratings</h3>
-            <div class="movie-item imdb">
-              <h3>IMDb</h3>
-              <div id=imdb3>
-              </div>
-            </div>
-            <div class="movie-item mc">
-              <h3>Metacritic</h3>
-              <div id=mc3>
-              </div>
-            </div>
-            <div class="movie-item rt">
-              <h3>Rotten Tomatoes</h3>
-              <div id=rt3>
-              </div>
-            </div>
+            <img class="movieItem" src="images/movie3.jpg" alt="Thor3">
+            <h3 class="movieItem imdb">IMDb</h3>
+              <div class="movieItem" id=imdb3>a</div>
+            <h3 class="movieItem mc">Metacritic</h3>
+              <div class="movieItem" id=mc3></div>
+            <h3 class="movieItem rt">Rotten Tomatoes</h3>
+              <div class="movieItem rt" id=rttm3>b</div>
+              <div class="movieItem rt" id=rtas3>c</div>
           </div>
         </div>
         
-        <div class="movie-box">
+        <div class="movieBox">
           <h3>Thor: Love and Thunder</h3>
-          <div class="movie-container">
-            <img class="movie-item upcoming-movie" src="images/movie4.jpg" alt="Thor4">
-            <div class="upcoming-movie">Coming Soon (2022)</div>
+          <div class="movieContainer">
+            <img class="movieItem upcomingMovie" src="images/movie4.jpg" alt="Thor4">
+            <div class="upcomingMovie">Coming Soon (2022)</div>
           </div>
         </div>
       </div>
