--- a/main.html
+++ b/main.html
@@ -200,6 +200,7 @@
                 <img class="star" id="imdb3Star5" src="images/fullstar.png">
                 <img class="star" id="imdb3Star6" src="images/fullstar.png">
                 <img class="star" id="imdb3Star7" src="images/fullstar.png">
+                <img class="star" id="imdb3Star7" src="images/fullstar.png">
               </div>
               <div class="movieItem" id="imdb3"></div>
             <h3 class="movieItem mc">Metacritic</h3>
